Update and rename 10-RPS.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title >Rock Paper Scissor score card</title>
-  <link rel="stylesheet" href="10-RPS.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,8 +19,8 @@
   </button>
 
   <button onclick="playerSelector('Scissor');" class="move-button">
-    <img src="scissors-emoji.png" class="move-icon">
-    
+    <img src="scissor-emoji.png" class="move-icon">
+
   </button>
 
   <p class="js-result result-element"></p>
@@ -41,7 +41,7 @@
 
 
 
-  <script src="10-RPS.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
