--- a/To-do List/index.html
+++ b/To-do List/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <title>TODO-LIST</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<p>Todo List Practice</p>
-<input  class="js-input" type="text" placeholder="Todo name">
-<input  class="js-date" type="date">
-<button class="js-button" onclick="addTodo()">Add</button>
-<div class="js-todo-row-input"></div>
+<p class="heading">Todo List Practice</p>
+<input  class="js-input search" type="text" placeholder="Todo name">
+<input  class="js-date date" type="date">
+<button class="js-button button" onclick="addTodo()">Add</button>
+<div class="js-todo-row-input result todo-grid"></div>
 <script src="script.js"></script>
 
 </body>
