--- a/To-do List/index.html
+++ b/To-do List/index.html
@@ -7,10 +7,10 @@
 <body>
 
 <p class="heading">Todo List Practice</p>
-<input  class="js-input search" type="text" placeholder="Todo name">
-<input  class="js-date date" type="date">
-<button class="js-button button" onclick="addTodo()">Add</button>
-<div class="js-todo-row-input result todo-grid"></div>
+<input class="js-input" type="text" placeholder="Todo name">
+<input class="js-date" type="date">
+<button class="js-button" onclick="addTodo()">Add</button>
+<div class="js-todo-row-input"></div>
 <script src="script.js"></script>
 
 </body>
