--- a/rockpaperscissor/index.html
+++ b/rockpaperscissor/index.html
@@ -10,16 +10,16 @@
   <p class="title"> Rock Paper Scissor</p>
   
   <button onclick="playerSelector('Rock');" class="move-button" >
-    <img src="rock-emoji.png" class="move-icon">
+    <img src="Rock-emoji.png" class="move-icon">
   </button>
 
   <button onclick="playerSelector('Paper');" class="move-button">
-    <img src="paper-emoji.png" class="move-icon">
+    <img src="Paper-emoji.png" class="move-icon">
     
   </button>
 
   <button onclick="playerSelector('Scissor');" class="move-button">
-    <img src="scissor-emoji.png" class="move-icon">
+    <img src="Scissor-emoji.png" class="move-icon">
 
   </button>
 
